# cppTorchNN

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  net.pt  torchtest
tools/: download_mnist.py
